<resources>
    <string name="app_name">Kikiride</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="google_maps_keyy" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAhgOKhJsKlAvZ_2PCWgu-2ysY79fI54G4
    </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="vehicle_insurance_ndetails">Vehicle Insurance\nDetails</string>
    <string name="insurance_company_name">Insurance Company Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="upload_a_copy_of_insurance_sticker">Upload a Copy of Insurance Sticker</string>
    <string name="vbc">vbc</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="nothing">Nothing</string>
    <string name="price_of_journey">Price of Journey</string>
    <string name="my_profile">My profile</string>
    <string name="my_car">My car</string>
    <string name="my_rides">My Rides</string>
    <string name="seating_capacity">Seating capacity</string>
    <string name="car_color">Car Color</string>
    <string name="car_model">Car Model</string>
    <string name="car_make">Car Make</string>
    <string name="car_registration_number">Car Registration number</string>
    <string name="car_details">Car details</string>
    <string name="insurance">Insurance</string>
    <string name="driver_details">Driver details</string>
</resources>
