
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/myprofile" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="never" android:title="@string/my_profile"/>

    <item
        android:id="@+id/mycar" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="never" android:title="@string/my_car"/>
    <item
        android:id="@+id/myride" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="never" android:title="@string/my_rides"/>

    <item
        android:id="@+id/logout" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="never" android:title="@string/logout"/>
    <item

        android:id="@+id/about" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/about">
    </item>
    <item
        android:id="@+id/exit"  app:showAsAction="never" android:title="@string/exit">
    </item>
</menu>
