<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:padding="5dp"
     >


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_details"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:id="@+id/carlayout">

                <ImageView
                    android:id="@+id/carimageview"


                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/carico" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="05dp"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/regno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/car_registration_number"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/carmake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/car_make"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/carmodel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/car_model"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/carcolor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/car_color"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/capacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/seating_capacity"
                        android:imeOptions="actionDone"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butttonshape"
                android:textColor="#fff"
                android:text="Add Car"
                android:visibility="gone"
                android:id="@+id/addVehicle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/insurancelayout"
                android:paddingStart="5dp"

                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                     android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingStart="10dp"
                        android:hint="@string/insurance_company_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiry_date"
                        android:focusable="false"
                        android:paddingStart="10dp"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butttonshape"
                android:textColor="#fff"
                android:text="Add Car"
                android:visibility="gone"
                android:id="@+id/addInsurance"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver_details"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/driverlayout"
                android:paddingStart="5dp"

                android:orientation="vertical">


                <com.example.myride.customLayoutclass.RoundedImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    android:id="@+id/drierImage"/>



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/drivername"

                    android:focusable="false"
                    android:hint="Driver Name"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/natid"

                        android:focusable="false"
                        android:hint="National Identity Number"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                </LinearLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dob"
                        android:inputType="date"
                        android:focusable="false"
                        android:maxLines="1"
                        android:imeOptions="actionNext"

                        android:hint="Date of Birth "
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/liscence"
                        android:inputType="text"
                        android:focusable="false"
                        android:maxLines="1"
                        android:hint="Driving Licence Number"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/liscenceExpiry"
                        android:inputType="date"
                        android:focusable="false"
                        android:maxLines="1"
                        android:hint="Expiry Date of Driving Licence "

                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:focusable="false"
                        android:maxLines="1"
                        android:hint="Email (optional)"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butttonshape"
                android:textColor="#fff"
                android:text="Add Car"
                android:visibility="gone"
                android:id="@+id/addDriver"
                />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>